[gd_scene load_steps=12 format=3 uid="uid://b1l157bnr6704"]

[ext_resource type="Script" path="res://main_scenes/Main.gd" id="1_cdip8"]
[ext_resource type="PackedScene" uid="uid://ddiwmaokiso8v" path="res://main_scenes/start_scene.tscn" id="2_8crqo"]

[sub_resource type="Animation" id="Animation_26hyr"]
resource_name = "TransIn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("loadingLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transitionScreen:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jsvdp"]
resource_name = "TransOut"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitionScreen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("loadingLabel:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2x6h5"]
_data = {
"TransIn": SubResource("Animation_26hyr"),
"TransOut": SubResource("Animation_jsvdp")
}

[sub_resource type="Animation" id="Animation_2u2in"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5508c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3i8s1"]
_data = {
"FadeIn": SubResource("Animation_2u2in"),
"RESET": SubResource("Animation_5508c")
}

[sub_resource type="Animation" id="Animation_etylw"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jh86p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwmld"]
_data = {
"FadeIn": SubResource("Animation_etylw"),
"RESET": SubResource("Animation_jh86p")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_cdip8")

[node name="StageManager" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="transitionScreen" type="ColorRect" parent="StageManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="transitionAnimation" type="AnimationPlayer" parent="StageManager"]
libraries = {
"": SubResource("AnimationLibrary_2x6h5")
}

[node name="loadingLabel" type="Label" parent="StageManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -576.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartScreen" parent="." instance=ExtResource("2_8crqo")]

[node name="Win_Lose" type="CanvasLayer" parent="."]
process_mode = 3
layer = 20

[node name="You_Lose" type="ColorRect" parent="Win_Lose"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.490196, 0.0823529, 0.164706, 1)

[node name="lose_label" type="Label" parent="Win_Lose/You_Lose"]
layout_mode = 0
offset_left = 536.0
offset_top = 258.0
offset_right = 606.0
offset_bottom = 284.0
scale = Vector2(3, 3)
text = "You Lose"

[node name="RetryButton" type="Button" parent="Win_Lose/You_Lose"]
layout_mode = 0
offset_left = 568.0
offset_top = 358.0
offset_right = 618.0
offset_bottom = 389.0
scale = Vector2(3, 3)
text = "Retry"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Win_Lose/You_Lose"]
libraries = {
"": SubResource("AnimationLibrary_3i8s1")
}

[node name="You_Win" type="ColorRect" parent="Win_Lose"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.443137, 1, 0.509804, 1)

[node name="win_label" type="Label" parent="Win_Lose/You_Win"]
layout_mode = 0
offset_left = 345.0
offset_top = 235.0
offset_right = 550.0
offset_bottom = 265.0
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(0, 0, 0.870588, 1)
text = "Congratulations! You Win!"

[node name="PlayAgainButton" type="Button" parent="Win_Lose/You_Win"]
layout_mode = 0
offset_left = 499.0
offset_top = 341.0
offset_right = 594.0
offset_bottom = 372.0
scale = Vector2(3, 3)
text = "Play Again?"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Win_Lose/You_Win"]
libraries = {
"": SubResource("AnimationLibrary_dwmld")
}

[connection signal="pressed" from="Win_Lose/You_Lose/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Win_Lose/You_Win/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
